# coro_examples

./: .gitignore  README.md
module2/: CMakeLists.txt  README.md  README.md~  package.xml
module2/src/: hello.cpp  pubvel.cpp  subpose.cpp  useservices.cpp
module3/: CMakeLists.txt  README.md  package.xml
module3/data/: goToPoseCreateInput.txt  goToPositionInput.txt  parameters.txt
module3/include/module3/: goToPoseCreate.h  goToPosition.h
module3/src/: goToPoseCreateApplication.cpp  goToPoseCreateApplication.cpp~  goToPoseCreateImplementation.cpp  goToPoseCreateImplementation.cpp~  goToPositionApplication.cpp  goToPositionImplementation.cpp
module4/: CMakeLists.txt  README.md  package.xml
module4/data/: pickAndPlaceInput.txt  robotCalibrationInput.txt  robot_1_config.txt  robot_2_config.txt  robot_3_config original values.txt  robot_3_config.txt  robot_4_config.txt  robot_5_config.txt  robot_5_config.txt~
module4/include/module4/: COM7  lynxmotionUtilities.h  lynxmotionUtilities.h~  pickAndPlace.h  robotProgramming.h
module4/src/: COM4  lynxmotionUtilities.cpp  lynxmotionUtilities.cpp~  pickAndPlaceApplication.cpp  pickAndPlaceImplementation.cpp  robotProgrammingApplication.cpp  robotProgrammingImplementation.cpp
module5/src/: CMakeLists.txt
module5/src/binaryThresholding/: CMakeLists.txt  binaryThresholding.h  binaryThresholdingApplication.cpp  binaryThresholdingImplementation.cpp
module5/src/binaryThresholdingOtsu/: CMakeLists.txt  binaryThresholdingOtsu.h  binaryThresholdingOtsuApplication.cpp  binaryThresholdingOtsuImplementation.cpp
module5/src/cameraCalibration/: CMakeLists.txt  cameraCalibration.h  cameraCalibrationApplication.cpp  cameraCalibrationImplementation.cpp
module5/src/cameraInvPerspectiveBinocular/: CMakeLists.txt  cameraInvPerspectiveBinocular.h  cameraInvPerspectiveBinocularApplication.cpp  cameraInvPerspectiveBinocularImplementation.cpp
module5/src/cameraInvPerspectiveMonocular/: CMakeLists.txt  cameraInvPerspectiveMonocular.h  cameraInvPerspectiveMonocularApplication.cpp  cameraInvPerspectiveMonocularImplementation.cpp
module5/src/cameraModel/: CMakeLists.txt  cameraModel.h  cameraModelApplication.cpp  cameraModelImplementation.cpp
module5/src/cameraModelData/: CMakeLists.txt  cameraModelData.h  cameraModelDataApplication.cpp  cameraModelDataImplementation.cpp
module5/src/cameraModelDataSimulator/: CMakeLists.txt  cameraModelDataSimulatorApplication.cpp  cameraModelDataSimulatorImplementation.cpp
module5/src/cannyEdgeDetection/: CMakeLists.txt  cannyEdgeDetection.h  cannyEdgeDetectionApplication.cpp  cannyEdgeDetectionImplementation.cpp
module5/src/colourSegmentation/: CMakeLists.txt  colourSegmentation.h  colourSegmentationApplication.cpp  colourSegmentationImplementation.cpp
module5/src/colourToGreyscale/: CMakeLists.txt  colourToGreyscale.h  colourToGreyscaleApplication.cpp  colourToGreyscaleImplementation.cpp
module5/src/colourToHIS/: CMakeLists.txt  colourToHIS.h  colourToHISApplication.cpp  colourToHISImplementation.cpp
module5/src/connectedComponents/: CMakeLists.txt  connectedComponents.h  connectedComponentsApplication.cpp  connectedComponentsImplementation.cpp
module5/src/contourExtraction/: CMakeLists.txt  contourExtraction.h  contourExtractionApplication.cpp  contourExtractionImplementation.cpp
module5/src/data/: binaryThresholdingInput.txt  binaryThresholdingOtsuInput.txt  cameraCalibConfig.xml  cameraCalibrationInput.txt  cameraInvPerspectiveMonocularInput.txt  cameraModelCoefficientsRight.txt  cameraModelDataInput.txt  cameraModelImageControlPoints.txt  colourSegmentationInput.txt  connectedComponentsInput.txt  contourExtractionInput.txt  featureExtractionInput.txt  featureExtractionOutput.txt  gaussianFilteringInput.txt  grabCutInput.txt  imageAcquisitionInput.txt  pickAndPlaceInput.txt  robotProgrammingInput.txt  robot_1_config.txt  robot_2_config.txt  robot_3_config.txt
module5/src/faceDetection/: CMakeLists.txt  faceDetectionApplication.cpp  faceDetectionApplication.cpp~  faceDetectionImplementation.cpp  faceDetectionImplementation.cpp~
module5/src/featureExtraction/: #featureExtractionApplication.cpp#  CMakeLists.txt  featureExtraction.h  featureExtractionApplication.cpp  featureExtractionImplementation.cpp
module5/src/gaussianFiltering/: CMakeLists.txt  gaussianFiltering.h  gaussianFilteringApplication.cpp  gaussianFilteringImplementation.cpp
module5/src/grabCut/: CMakeLists.txt  grabCut.h  grabCutApplication.cpp  grabCutImplementation.cpp
module5/src/imageAcquisition/: CMakeLists.txt  imageAcquisition.h  imageAcquisitionApplication.cpp  imageAcquisitionImplementation.cpp
module5/src/imageAcquisitionFromImageFile/: CMakeLists.txt  imageAcquisitionFromImageFileApplication.cpp  imageAcquisitionFromImageFileImplementation.cpp
module5/src/imageAcquisitionFromSimulatorCamera/: CMakeLists.txt  imageAcquisitionFromSimulatorCameraApplication.cpp  imageAcquisitionFromSimulatorCameraImplementation.cpp
module5/src/imageAcquisitionFromUSBCamera/: CMakeLists.txt  imageAcquisitionFromUSBCameraApplication.cpp  imageAcquisitionFromUSBCameraImplementation.cpp
module5/src/imageAcquisitionFromVideoFile/: CMakeLists.txt  imageAcquisitionFromVideoFileApplication.cpp  imageAcquisitionFromVideoFileImplementation.cpp
module5/src/moveRobot/: CMakeLists.txt  moveRobotApplication.cpp  moveRobotImplementation.cpp
module5/src/pickAndPlace/: CMakeLists.txt  pickAndPlace.h.original  pickAndPlaceApplication.cpp  pickAndPlaceImplementation.cpp.original
module5/src/robotCalibration/: CMakeLists.txt  robotCalibration.h  robotCalibrationApplication.cpp
module5/src/robotCameraModelDataSimulator/: CMakeLists.txt  robotCameraModelDataSimulatorApplication.cpp  (+1 more)
module9/: CMakeLists.txt  README.md  module9.asd  package.xml
module9/cram_lynxmotion_al5d_tutorials/: CMakeLists.txt  README.md  cram-lynxmotion-al5d-tutorials.asd  package.xml
module9/src/: action-designators.lisp  camera.lisp  joint-states.lisp  location-designators.lisp  position-publisher.lisp  robot-plans.lisp  selecting-process-modules.lisp
(+129 files in other folders)
