<?xml version="1.0"?>
<package format="2">
  <name>module3</name>
  <version>0.0.0</version>
  <description>Package for Introduction to Cognitive Robotics, Module 3</description>
  <maintainer email="david@vernon.eu">David Vernon</maintainer>
  <license>BSD</license>
  <url type="website">http://www.cognitiverobotics.net</url>
  <author email="david@vernon.eu">David Vernon</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
