ADD_SUBDIRECTORY(binaryThresholding)
ADD_SUBDIRECTORY(binaryThresholdingOtsu)
ADD_SUBDIRECTORY(cameraCalibration)
ADD_SUBDIRECTORY(cameraInvPerspectiveMonocular)
ADD_SUBDIRECTORY(cameraInvPerspectiveBinocular)
ADD_SUBDIRECTORY(cameraModel)
ADD_SUBDIRECTORY(cameraModelData)
ADD_SUBDIRECTORY(cameraModelDataSimulator)
ADD_SUBDIRECTORY(cannyEdgeDetection)
ADD_SUBDIRECTORY(colourSegmentation)
ADD_SUBDIRECTORY(colourToGreyscale)
ADD_SUBDIRECTORY(colourToHIS)
ADD_SUBDIRECTORY(connectedComponents)
ADD_SUBDIRECTORY(contourExtraction)
ADD_SUBDIRECTORY(featureExtraction)
ADD_SUBDIRECTORY(gaussianFiltering)
ADD_SUBDIRECTORY(grabCut)
ADD_SUBDIRECTORY(imageAcquisitionFromImageFile)
ADD_SUBDIRECTORY(imageAcquisitionFromUSBCamera)
ADD_SUBDIRECTORY(imageAcquisitionFromVideoFile)
ADD_SUBDIRECTORY(imageAcquisitionFromSimulatorCamera)
ADD_SUBDIRECTORY(moveRobot)
ADD_SUBDIRECTORY(sobelEdgeDetection)

